; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7164/extr_saa7164-encoder.c_vidioc_try_fmt_vid_cap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7164/extr_saa7164-encoder.c_vidioc_try_fmt_vid_cap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.saa7164_encoder_fh* }
%struct.saa7164_encoder_fh = type { %struct.saa7164_port* }
%struct.saa7164_port = type { i32, i32, i32, i32, %struct.saa7164_dev* }
%struct.saa7164_dev = type { i32 }
%struct.v4l2_format = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i64, i64, i32 }

@V4L2_PIX_FMT_MPEG = common dso_local global i32 0, align 4
@DBGLVL_ENC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"VIDIOC_TRY_FMT: w: %d, h: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_format*)* @vidioc_try_fmt_vid_cap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_try_fmt_vid_cap(%struct.file* %0, i8* %1, %struct.v4l2_format* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_format*, align 8
  %7 = alloca %struct.saa7164_encoder_fh*, align 8
  %8 = alloca %struct.saa7164_port*, align 8
  %9 = alloca %struct.saa7164_dev*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_format* %2, %struct.v4l2_format** %6, align 8
  %10 = load %struct.file*, %struct.file** %4, align 8
  %11 = getelementptr inbounds %struct.file, %struct.file* %10, i32 0, i32 0
  %12 = load %struct.saa7164_encoder_fh*, %struct.saa7164_encoder_fh** %11, align 8
  store %struct.saa7164_encoder_fh* %12, %struct.saa7164_encoder_fh** %7, align 8
  %13 = load %struct.saa7164_encoder_fh*, %struct.saa7164_encoder_fh** %7, align 8
  %14 = getelementptr inbounds %struct.saa7164_encoder_fh, %struct.saa7164_encoder_fh* %13, i32 0, i32 0
  %15 = load %struct.saa7164_port*, %struct.saa7164_port** %14, align 8
  store %struct.saa7164_port* %15, %struct.saa7164_port** %8, align 8
  %16 = load %struct.saa7164_port*, %struct.saa7164_port** %8, align 8
  %17 = getelementptr inbounds %struct.saa7164_port, %struct.saa7164_port* %16, i32 0, i32 4
  %18 = load %struct.saa7164_dev*, %struct.saa7164_dev** %17, align 8
  store %struct.saa7164_dev* %18, %struct.saa7164_dev** %9, align 8
  %19 = load i32, i32* @V4L2_PIX_FMT_MPEG, align 4
  %20 = load %struct.v4l2_format*, %struct.v4l2_format** %6, align 8
  %21 = getelementptr inbounds %struct.v4l2_format, %struct.v4l2_format* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 3
  store i32 %19, i32* %23, align 8
  %24 = load %struct.v4l2_format*, %struct.v4l2_format** %6, align 8
  %25 = getelementptr inbounds %struct.v4l2_format, %struct.v4l2_format* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 2
  store i64 0, i64* %27, align 8
  %28 = load %struct.saa7164_port*, %struct.saa7164_port** %8, align 8
  %29 = getelementptr inbounds %struct.saa7164_port, %struct.saa7164_port* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.saa7164_port*, %struct.saa7164_port** %8, align 8
  %32 = getelementptr inbounds %struct.saa7164_port, %struct.saa7164_port* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = mul nsw i32 %30, %33
  %35 = load %struct.v4l2_format*, %struct.v4l2_format** %6, align 8
  %36 = getelementptr inbounds %struct.v4l2_format, %struct.v4l2_format* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  store i32 %34, i32* %38, align 8
  %39 = load %struct.v4l2_format*, %struct.v4l2_format** %6, align 8
  %40 = getelementptr inbounds %struct.v4l2_format, %struct.v4l2_format* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 1
  store i64 0, i64* %42, align 8
  %43 = load i32, i32* @DBGLVL_ENC, align 4
  %44 = load %struct.saa7164_port*, %struct.saa7164_port** %8, align 8
  %45 = getelementptr inbounds %struct.saa7164_port, %struct.saa7164_port* %44, i32 0, i32 3
  %46 = load i32, i32* %45, align 4
  %47 = load %struct.saa7164_port*, %struct.saa7164_port** %8, align 8
  %48 = getelementptr inbounds %struct.saa7164_port, %struct.saa7164_port* %47, i32 0, i32 2
  %49 = load i32, i32* %48, align 8
  %50 = call i32 @dprintk(i32 %43, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %46, i32 %49)
  ret i32 0
}

declare dso_local i32 @dprintk(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
